--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,59 +1,84 @@
  body {
-    background-image: url();
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    /* width:100%; */
-  } 
+     background-image: url();
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: cover;
+     /* width:100%; */
+ }
 
-.bg-light {
-background-image: url(" ");
+ #myModal .modal-content{
+     border-radius: 10px;
+
+ }
+
+ .bg-light {
+     background-image: url(" ");
+ }
+
+ .navbar-light {
+    color: rgba(34, 221, 34, 0.9);
+     width: 100%;
+     height: 100px;
+     /* margin: auto; */
+ }
+
+ .navbar-brand {
+     color: #00e600;
+     font-size: 3em;
+ }
+
+ /* CARD */
+ .container {  
+     margin-top: 20px;
+     margin-bottom: 20px;
+ }
+
+ .no-gutters{
+     border-radius: 10px;
+     border: 3px solid #003300;
+ }
+
+ .card-img {
+     /* width: 300px;
+     height: auto; */
+     padding:10px;
+  
+ }
+
+.card-body {
+    float: none;
 }
 
-.navbar-light  {
-    color: red;
-    width: 100%;
-    height: 100px;
-    /* margin: auto; */
+#buttonHeart, #buttonSkull {
+    border-radius: 10px;
+    border: 2px solid #003300;
 }
 
-#card {
-
-    margin: 0 auto; /* Added */
-        float: none; /* Added */
-        margin-bottom: 10px;
-}
-
-#rowCard{
-    text-align: center;
-    margin-top: 50px;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color:blue;
-    border-color: red;
-    text-align: center;
-    margin-top: 100px;
-}
-
-.btn-secondary {
-    color: #fff;
-    background-color: red;
-    border-color: red;
-    text-align: center;
-    margin-top: 100px;
-}
+ #userName {
+     color: blue;
+     margin: 10px;
+ }
 
 
-@media (min-width: 768px){
-.col-md-8 {
-    width:100%;
-}
-/* .card-image {
-    width:50%;
-} */
-.card-body{
-    width: 100%;
-}
-}
+ /* Login style */
+
+ .modal-header, .modal-footer {
+     background-color: #003300;
+ }
+
+ .modal-title {
+     color: white;
+ }
+
+ #loginButton {
+     background-color: #00e600;
+ }
+
+ @media (max-width: 768px) {
+     #inputSearch, #buttonSearch {
+         width: 100%;
+     }
+     .card-image {
+         
+     }
+ }
