--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
  body {
+     background-color: rgb(101, 175, 150);
      background-image: url();
      background-repeat: no-repeat;
      background-attachment: fixed;
@@ -6,9 +7,8 @@
      /* width:100%; */
  }
 
- #myModal .modal-content{
+ #myModal .modal-content {
      border-radius: 10px;
-
  }
 
  .bg-light {
@@ -16,7 +16,7 @@
  }
 
  .navbar-light {
-    color: rgba(34, 221, 34, 0.9);
+     color: rgba(34, 221, 34, 0.9);
      width: 100%;
      height: 100px;
      /* margin: auto; */
@@ -28,37 +28,38 @@
  }
 
  /* CARD */
- .container {  
+
+ .container {
      margin-top: 20px;
      margin-bottom: 20px;
+     padding: 0;
+     background-color: azure;
+     border-radius: 10px;
  }
 
- .no-gutters{
+ .no-gutters {
      border-radius: 10px;
      border: 3px solid #003300;
  }
 
  .card-img {
-     /* width: 300px;
-     height: auto; */
-     padding:10px;
-  
+     padding: 10px;
+     display: block;
+     max-width: 100%;
+     height: auto;
  }
 
-.card-body {
-    float: none;
-}
+ .card-body {}
 
-#buttonHeart, #buttonSkull {
-    border-radius: 10px;
-    border: 2px solid #003300;
-}
+ #buttonHeart, #buttonSkull {
+     border-radius: 10px;
+     border: 2px solid #003300;
+ }
 
  #userName {
      color: blue;
      margin: 10px;
  }
-
 
  /* Login style */
 
@@ -74,11 +75,27 @@
      background-color: #00e600;
  }
 
- @media (max-width: 768px) {
+ @media (max-width: 640px) {
      #inputSearch, #buttonSearch {
-         width: 100%;
+     width: 100%;
      }
+
+     .navbar-brand {
+         font-size:1.5em ;
+         margin:0;
+         padding:0;
+     }
+     
      .card-image {
+        
+     }
+
+     .card-body {
          
+     }
+
+     #userName {
+         background-color: white;
+         width: 100%;
      }
  }
