--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
  body {
      background-color: rgb(101, 175, 150);
-     background-image: url();
+     /* background-image: url();  to link with array */
      background-repeat: no-repeat;
      background-attachment: fixed;
      background-size: cover;
@@ -19,7 +19,6 @@
      color: rgba(34, 221, 34, 0.9);
      width: 100%;
      height: 100px;
-     /* margin: auto; */
  }
 
  .navbar-brand {
@@ -57,7 +56,7 @@
  }
 
  #userName {
-     color: blue;
+     color: #00e600;
      margin: 10px;
  }
 
@@ -75,27 +74,25 @@
      background-color: #00e600;
  }
 
+ /* Breakpoints */
+
  @media (max-width: 640px) {
-     #inputSearch, #buttonSearch {
-     width: 100%;
-     }
-
      .navbar-brand {
-         font-size:1.5em ;
-         margin:0;
-         padding:0;
+         font-size: 1.5em;
+         margin: 0;
+         padding: 0;
      }
-     
-     .card-image {
-        
-     }
-
-     .card-body {
-         
-     }
-
-     #userName {
-         background-color: white;
+     #inputSearch, #buttonSearch {
          width: 100%;
+     }
+     .no-gutters{
+         margin-top: 50px;;
+     }
+     #userName {
+         text-align: center;
+         background-color: #003300;
+         width: 100%;
+         margin-top: 10px;
+         border-radius: 5px;
      }
  }
