--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,18 @@
- body {
-     background-color: rgb(101, 175, 150);
-     /* background-image: url();  to link with array */
+ /* .body {
+     background-image: url(" "); 
      background-repeat: no-repeat;
      background-attachment: fixed;
      background-size: cover;
-     /* width:100%; */
+      width:100%; 
+ } */
+
+ .bg {
+     background-image: url(" ");
+     /* background-color: rgb(101, 175, 150); */
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: cover;
+     height: 100%;
  }
 
  #myModal .modal-content {
@@ -16,14 +24,17 @@
  }
 
  .navbar-light {
-     color: rgba(34, 221, 34, 0.9);
+     /* color: rgba(34, 221, 34, 0.9); */
      width: 100%;
      height: 100px;
+     background-image: url("../images/img_abstract02.jpg");
  }
 
- .navbar-brand {
-     color: #00e600;
+ #brand {
+     color: whitesmoke;
      font-size: 3em;
+     /* text-align: justify; */
+     /* border: 1px solid red; */
  }
 
  /* CARD */
@@ -48,11 +59,13 @@
      height: auto;
  }
 
- .card-body {}
-
  #buttonHeart, #buttonSkull {
      border-radius: 10px;
      border: 2px solid #003300;
+ }
+
+ #buttonHeart {
+     margin-left: 50px;
  }
 
  #userName {
@@ -64,6 +77,7 @@
 
  .modal-header, .modal-footer {
      background-color: #003300;
+     background-image: url("../images/img_abstract02.jpg");
  }
 
  .modal-title {
@@ -72,6 +86,14 @@
 
  #loginButton {
      background-color: #00e600;
+ }
+
+ footer {
+     position: fixed;
+     width: 100%;
+     left: 0;
+     bottom: 0;
+     background-image: url("../images/img_abstract02.jpg");
  }
 
  /* Breakpoints */
@@ -85,8 +107,9 @@
      #inputSearch, #buttonSearch {
          width: 100%;
      }
-     .no-gutters{
-         margin-top: 50px;;
+     .no-gutters {
+         margin-top: 50px;
+         ;
      }
      #userName {
          text-align: center;
