Heart button linked to db, skull button reloads page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,10 @@
      /* border: 1px solid red; */
  }
 
+ #moto {
+     color: whitesmoke;
+ }
+
  .btn-outline-success {
      background-color: whitesmoke;
  }
