--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
  } */
 
  .bg {
-     background-image: url(" ");
+     background-image: url("../images/background_giphy03.gif");
      /* background-color: rgb(101, 175, 150); */
      background-repeat: no-repeat;
      background-attachment: fixed;
